tests/neg/i5498-postfixOps.check
-- [E018] Syntax Error: tests/neg/i5498-postfixOps.scala:4:10 ----------------------------------------------------------
4 |  1 second // error: usage of postfix operator
  |          ^
  |          expression expected but [31mend of statement[0m found
  |
  | longer explanation available when compiling with `-explain`
-- [E018] Syntax Error: tests/neg/i5498-postfixOps.scala:6:37 ----------------------------------------------------------
6 |  Seq(1, 2).filter(List(1,2) contains) // error: usage of postfix operator // error
  |                                     ^
  |                                     expression expected but [31m')'[0m found
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i5498-postfixOps.scala:6:0 -------------------------------------------------------------------------
6 |  Seq(1, 2).filter(List(1,2) contains) // error: usage of postfix operator // error
  |^
  |No given instance of type scala.concurrent.duration.DurationConversions.Classifier[Null] was found for parameter ev of method second in trait DurationConversions
